--- a/app/src/main/res/drawable/licensebackground.xml
+++ b/app/src/main/res/drawable/licensebackground.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-
     android:shape="rectangle" >
     <corners
         android:radius="40dp"
@@ -9,9 +8,9 @@
     <gradient
         android:angle="45"
         android:centerX="40%"
-        android:centerColor="@color/f"
+        android:centerColor="@color/h"
         android:startColor="@color/d"
-        android:endColor="@color/b"
+        android:endColor="@color/c"
         android:type="linear"
         />
     <padding
@@ -21,11 +20,11 @@
         android:bottom="0dp"
         />
     <size
-        android:width="300dp"
-        android:height="66dp"
+        android:width="400dp"
+        android:height="45dp"
         />
     <stroke
         android:width="5dp"
-        android:color="@color/s"
+        android:color="@color/g"
         />
 </shape>
