--- a/app/src/main/res/drawable/logical.xml
+++ b/app/src/main/res/drawable/logical.xml
@@ -8,7 +8,7 @@
     <gradient
         android:angle="45"
         android:centerX="35%"
-        android:centerColor="@color/k"
+        android:centerColor="@color/r"
         android:startColor="@color/c"
         android:endColor="@color/c"
         android:type="linear"
@@ -25,6 +25,6 @@
         />
     <stroke
         android:width="5dp"
-        android:color="@color/g"
+        android:color="@color/c"
         />
 </shape>
