--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -72,7 +72,7 @@
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/speed" />
+            app:srcCompat="@drawable/speedometerx" />
 
     </LinearLayout>
     <LinearLayout
