--- a/app/src/main/res/menu/home_layout.xml
+++ b/app/src/main/res/menu/home_layout.xml
@@ -4,9 +4,15 @@
 
     <item
         android:id="@+id/vehicleInfoId"
-        android:title="Set Vehicle information"
+        android:title="Set Vehicle Information"
         app:showAsAction="never"
         android:icon="@drawable/ic_baseline_emoji_transportation_24"
+        />
+    <item
+        android:id="@+id/licenseId"
+        android:title="Set your Driving License"
+        app:showAsAction="never"
+        android:icon="@drawable/logout"
         />
     <item
         android:id="@+id/settingId"
